# TensileLite

./: CMakeLists.txt  Makefile  run.sh  tensile_lite
docker/: dockerfile-build-ubuntu-rock  run.sh
inc/: IsaGenerater.h
src/: HgemmMfma.cpp  conf.h
